<package>
  <name>turtlebot_example</name>
  <version>0.0.1</version>
  <description>This package is an example package for ME 597.</description>

  <license>BSD</license>

  <url type="website">http://ros.org/turtlebot_example</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="sksellio@uwaterloo.ca">Sarah Elliott</maintainer>
  <author email="jdservos@uwaterloo.ca">James Servos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msg</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>std_msg"</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>


