<?xml version="1.0"?>
<package>
    <name>maggie_navigation</name>
    <version>0.0.1</version>
    <description>
        maggie_navigation metapackage
    </description>

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <author email="raul.perula@uc3m.es">Raul Perula-Martinez</author>


    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="raul.perula@uc3m.es">Raul Perula-Martinez</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>LEUC3M v1.0</license>


    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <url type="website">http://wiki.ros.org/maggie_navigation</url>
    <url type="bugtracker">https://github.com/UC3MSocialRobots/maggie_navigation/issues</url>
    <url type="repository">https://github.com/UC3MSocialRobots/maggie_navigation.git</url>


    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>nav</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- You can specify that this package is a metapackage here: -->
        <metapackage/>
    </export>
</package>
